# zk-email-pay

./: .gitignore  .gitmodules  .mcp.json  AGENT.md  AGENTS.md  CLAUDE.md  message.txt
.serena/: project.yml
contracts/: README.md
docs-konaito/: addresswallet-dapp-guide.md  addresswallet-to-emailwallet-token-transfer-flow.marp.md  email-verify.marp.md  email-wallet-current-implementation.md  email-wallet-deployment-checklist.md  emails.marp.md  emails.md  emailwallet-automation-plan.marp.md  enable.marp.md  existing-registerUnclaimedFund-documentation.md  faucet-setup-guide.md  ic-disconnect-guide.md  ic-dkim-key-usage-flow.md  implementation-limits-and-constraints.md  japansmartchain-sbt.md  jpyc.marp.md  mailto.md  registeredToken.sh  relayer-api-addresswallet-to-emailwallet.marp.md  relayer-api-vs-email.md  relayer-setup-guide.md  reply.md  slide.md  slide.pptx  unclaim-api-implementation-progress.md  wallet-to-email-lib-design.md  why-ic-required.md
email-wallet/: .gitignore  IMAP.Dockerfile  SMTP.Dockerfile  docker-compose.yaml  prover.out  relayer.out
eml-template/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  run-all.sh
eml-template/cases/: 00_render_ack.sh  01_api_create_new.sh  02_api_create_existing.sh  03_api_send.sh  04_api_recover.sh  05_event_ack.sh  06_event_account_created.sh  07_event_voided.sh  build.sh
eml-template/src/: mail.rs  main.rs  rest_api.rs
frontend/: README.md  package.json
konaito/: .gitignore  README.md  RELAYER_API_URL.md  frontend-nextjs-app-router.md  onboarding-campaign.md  ops-architecture.md  what-we-host.md  (+3 more)
(+235 files in other folders)
