[package]
name = "test-mail"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
handlebars = "4"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "builder", "smtp-transport"] }
